# lakers

./: .gitignore  Cargo.toml  installed_packages.txt  lakers.map
crypto/: Cargo.toml
crypto/lakers-crypto-cryptocell310-sys/: Cargo.toml
crypto/lakers-crypto-cryptocell310-sys/src/: lib.rs
crypto/lakers-crypto-rustcrypto-nrf/: Cargo.toml
crypto/lakers-crypto-rustcrypto-nrf/src/: lib.rs
crypto/lakers-crypto-rustcrypto-stm/: Cargo.toml
crypto/lakers-crypto-rustcrypto-stm/src/: lib.rs
crypto/lakers-crypto-rustcrypto/src/: lib.rs
crypto/src/: lib.rs
ead/lakers-ead-authz/src/: server.rs
ead/lakers-stm32wba-like/: Cargo.toml
ead/lakers-stm32wba-like/src/: device.rs  lib.rs
examples/coap/: Cargo.toml
examples/crypto-cc310/: calculate_np.py  convert_array_string.py  notes.txt  python-bignum.py
examples/crypto-cc310/src/: main.rs
examples/lakers-like-nrf52840/: Cargo.toml
examples/lakers-no_std/src/: main.rs
examples/lakers-nrf52840/: Cargo.toml  memory.x
examples/lakers-nrf52840-demo/: Cargo.toml
examples/lakers-nrf52840-demo-slow/: Cargo.toml
examples/lakers-nrf52840-demo/.cargo/: config.toml
examples/lakers-nrf52840-like/: Cargo.toml  build.rs
examples/lakers-nrf52840-like/.cargo/: config.toml
examples/lakers-nrf52840/.cargo/: config.toml
examples/lakers-nrf52840/src/: measure_stack.sh
examples/lakers-stm32wba/: Cargo.toml  build.rs
examples/lakers-stm32wba/.cargo/: config.toml
lakers-c/src/: initiator.rs  lib.rs
lakers-python/: Cargo.toml
lakers-python/src/: initiator.rs  lib.rs  responder.rs
lib/: Cargo.toml
lib/src/: cred_new_elsa.rs  edhoc.rs  edhoc_psk.rs  lib.rs
lib/src/edhoc/: psk.rs  statstat.rs
memory/: initiator_psk1  initiator_psk2  map_file.py  responder_psk1  responder_psk2
results/time/: handshake_time.py  stat-test5.csv  time-comparison.py
shared/: Cargo.toml
shared/src/: cred.rs  cred_new.rs  crypto.rs  lib.rs
temp/: draft_format_test.py
