[package]
name = "lakers"
version.workspace = true
edition = "2021"
authors = ["Mališa Vučinić <malisa.vucinic@inria.fr>"]
license.workspace = true
description = "An implementation of EDHOC (RFC 9528)"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
lakers-shared.workspace = true

defmt-or-log = { version = "0.2.1", default-features = false }
log = { version = "0.4", optional = true }
defmt = { version = "0.3", optional = true }

# embassy deps
embassy-executor = { version = "0.6.1", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.2.0", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
nrf52840-hal = "0.16.0"  # Use the latest version available
embedded-hal = "0.2.7"  # or whichever version you're using


[dev-dependencies]
lakers-ead-authz = { workspace = true }
lakers-crypto.workspace = true
hexlit = "0.5.3"

[features]
# NOTE: the ead features are just needed for multiplexing tests
default = [ "test-ead-none" ]
test-ead-none = [ ]
test-ead-authz = [ ]
defmt = ["dep:defmt"]
log = ["dep:log"]

[lib]
crate-type = ["rlib"]
