[package]
name = "lakers-nrf52840-demo-slow"
edition = "2021"
version.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

# embassy deps
embassy-executor = { version = "0.6.1", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.2.0", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
nrf52840-hal = "0.16.0"  # Use the latest version available
embedded-hal = "0.2.7"  # or whichever version you're using
nb = "1.0"

# lakers
lakers = { package = "lakers", path = "../../lib", features = [ "defmt" ] }
lakers-crypto = { path = "../../crypto", default-features = false }
lakers-crypto-psa = { path = "../../crypto/lakers-crypto-psa", default-features = false }
lakers-crypto-rustcrypto-nrf = { path = "../../crypto/lakers-crypto-rustcrypto-nrf", default-features = false }
lakers-shared.workspace = true

# misc
hexlit = "0.5.3"

# defmt
defmt = "0.3"
defmt-rtt = "0.4"

# depend on an allocator
embedded-alloc = "0.5.0"

# arm cortex m3 deps
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[features]
default = [ "crypto-rustcrypto-nrf", "ead-none" ]
crypto-rustcrypto-nrf = [ "lakers-crypto/rustcrypto-nrf" ]
ead-none = [ ]

[profile.release]
debug = 2
